# PyBin

./: main.py  pyproject.toml
templates/: bin.html  err1.html  err2.html  err3.html  input.html  search.html
