[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "p"
version = "0.1.0"
[tool.poetry.dependencies]
dnspython = "^1.16"
flask = "^1.1"
pymongo = "^3.10"
python = "^3.8"
randomstr = "^0.0.5"
[tool.poetry.dev-dependencies]
